refactor: Ajustes de issues